# qf-lib-harness

./: .gitignore  0_smoke_test.py  3_build_universe.py  4_inspect.py  5_quality_check.py  CLAUDE.md  README.md  README_FR.md  README_KO.md  README_ZH.md  _weasyprint_stub.py  config.py  dashboard.py  pyproject.toml  run_fast_backtest.py  run_tsmom_backtest.py  tsmom_alpha_model.py
.claude/skills/: CONVENTIONS.md
.claude/skills/issue-author/: SKILL.md
.claude/skills/issue-to-pr/: SKILL.md
alpha_lab/: CLAUDE.md  __init__.py  __main__.py  alpha_ledger.jsonl  core.py  pipeline.py  trial_template.py
alpha_lab/experiments/alpha101_kakushadze/: strategy.py
alpha_lab/experiments/exp_baseline_tsmom/: strategy.py
alpha_lab/experiments/exp_ls_mom_demo/: strategy.py
alpha_lab/tests/: conftest.py  test_core.py  test_main.py  test_pipeline.py
config_files/: settings.json
research/: 1_fetch_universe.py  2_download_prices.py  README.md  cli.py  config.py  dashboard.py  parquet_data_provider.py  run_fast_backtest.py  run_tsmom_backtest.py  tsmom_alpha_model_cached.py
